src/components/Portfolio/PortfolioStyles.scss
* {
  box-sizing: border-box;
}

.Portfolio {
  border: 2px solid yellow;
  --fs-title: clamp(2rem, 8vw, 4rem);

  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 2rem;
  background: #003329;
  color: white;
  height: auto;
  // overflow: auto;
  // overflow: hidden;
  
  .Title {
    font-size: var(--fs-title);
    margin: 6% 0 3% 0;
    align-self: center;
  }
  
  .Cards {
    border: 2px solid red;
    // display: flex;
    display: grid;
    // justify-content: center;
    grid-template-columns: 1fr 1fr;
    // flex-direction: column;
    margin: 0 5vw 0;
    gap: 4%;
    // height: auto;
    
  }
}

